# egison-haskell

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  Main.hs  Match.hs  MatchTH.hs  MatchTH2.hs  README.md  README_ja.md  egison-haskell.cabal  match.hs  mini-egison.cabal  package.yaml  stack.yaml
app/: Main.hs
benchmark/: BenchImport.hs  PokerBenchImport.hs  cards.txt  comb2.hs  comb2.md  functional-comb2.hs  multiset-nested-cons.hs  perm2.hs  pmo-comb2.hs  poker.hs  prime-pairs-2.hs  prime-pairs-6.hs  primePairs.hs
kotadev/: userpat.hs
sample/: benchmark.hs  cdcl.hs  deleteAs.hs  dp.hs  error.hs  hoge.hs  mapWithBothSides.hs  poker.hs  tree.hs  unordered-pair.hs  userpat.hs
src/Control/: Egison.hs
src/Control/Egison/: Core.hs  Match.hs  Matcher.hs  QQ.hs  TH.hs  TypedCore.hs  View.hs
src/Control/Egison/QQ/: Internal.hs  View.hs
test/: PPTest.hs  Spec.hs  Test.hs
