cabal-version: 1.12

name:           mini-egison
version:        0.1.0.0
description:    Template Haskell Implementation of Egison Pattern Matching
homepage:       https://github.com/egison/egison-haskell#readme
bug-reports:    https://github.com/egison/egison-haskell/issues
author:         Mayuko Kori, Satoshi Egi
maintainer:     Satoshi Egi <egi@egison.org>
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/egison/egison-haskell

library
  exposed-modules:
      Control.Egison
      Control.Egison.Core
      Control.Egison.Match
      Control.Egison.Matcher
      Control.Egison.QQ
  other-modules:
      Paths_mini_egison
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , split
    , haskell-src-meta
    , regex-compat
    , template-haskell
  default-language: Haskell2010

test-suite mini-egison-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      Spec
      Paths_mini_egison
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , mini-egison
    , hspec
    , primes
  default-language: Haskell2010
